# NFDRS4py

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  example.ipynb  example.md  example.py  nfdrs4.i  nfdrs4.py  nfdrs4_wrap.cpp  nfdrs4py.py  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
lib/NFDRS4/: CMakeLists.txt
lib/utctime/src/: utctime.cpp
nfdrs4py/: __init__.py  _nfdrs4_bindings.cp311-win_amd64.pyd  nfdrs4.i  nfdrs4_bindings.py  nfdrs4_wrap.cpp  nfdrs4py.py
nfdrs4py/nfdrs4py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
swig/: Readme.md
